Made entities, DB, mysql container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=e-Commerce
+
+# Datasource
+spring.datasource.url=jdbc:mysql://localhost:3307/ecommerce
+spring.datasource.username=ecommerce_user
+spring.datasource.password=ecommerce_pass
+# optional: explicit MySQL driver (not required if the JDBC driver is on the classpath)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Docker Compose
+spring.docker.compose.enabled=false
+
