--- a/e-Commerce-auth/pom.xml
+++ b/e-Commerce-auth/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.personal</groupId>
-    <artifactId>e-Commerce</artifactId>
+    <artifactId>e-Commerce-auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>e-Commerce</name>
-    <description>e-Commerce</description>
+    <name>e-Commerce-auth</name>
+    <description>e-Commerce-auth</description>
     <url/>
     <licenses>
         <license/>
@@ -42,9 +42,23 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
 
