Implement authentication module with user registration, login, and JWT token generation. Added Postman collections, environment setup, and Spring Security configurations.

--- a/db/Dockerfile-mysql
+++ b/db/Dockerfile-mysql
@@ -6,7 +6,7 @@ ENV MYSQL_DATABASE=ecommerce
 ENV MYSQL_USER=ecommerce_user
 ENV MYSQL_PASSWORD=ecommerce_pass
 
-COPY ./db/init/*.sql /docker-entrypoint-initdb.d/
+COPY ./init/*.sql /docker-entrypoint-initdb.d/
 
 # Portul standard MySQL
 EXPOSE 3306
