--- a/e-Commerce-auth/src/main/resources/application.properties
+++ b/e-Commerce-auth/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.properties.hibernate.format_sql=true
 # Docker Compose
 spring.docker.compose.enabled=false
 
+# Server port
+# App listens on port 8081
+server.port=8081
+
+# JWT Configuration
+jwt.secret=$UU8#jg*Q%Rq2#zWSDv4a!*dtJDVJ^3H4Rk0oUAmbe6g48$e92
+# 1 hour in milliseconds
+jwt.expiration-ms=3600000
+
